# sqlite4

./: GNUmakefile.linux  Make.defines  Make.linux  Make.opts  Make.unix  Make.win  Makefile  Makefile.in  Makefile.linux-gcc  Makefile.msc  README  autogen.sh  config.h.in  configure  configure.ac  configure.in  main.mk  mkdll.sh  mkextu.sh  mkextw.sh  mkso.sh  publish.sh  publish_osx.sh  spec.template  sqlite3.1  sqlite4.pc.in
lsm-test/: README  lsmtest.h  lsmtest1.c  lsmtest2.c  lsmtest3.c  lsmtest4.c  lsmtest5.c  lsmtest6.c  lsmtest7.c  lsmtest8.c  lsmtest9.c  lsmtest_datasource.c  lsmtest_func.c  lsmtest_io.c  lsmtest_main.c  lsmtest_mem.c  lsmtest_tdb.c  lsmtest_tdb.h  lsmtest_tdb2.cc  lsmtest_tdb3.c  lsmtest_util.c  sqltest.c
notes/: data_encoding.txt  database_design.txt  decimal_floating_point.txt  key_encoding.txt  unsigned_varint.txt
src/: Makefile  alter.c  analyze.c  attach.c  auth.c  backup.c  bitvec.c  btmutex.c  btree.c  btree.h  btreeInt.h  build.c  callback.c  complete.c  ctime.c  date.c  delete.c  env.c  expr.c  fault.c  fkey.c  fts5.c  fts5func.c  func.c  global.c  hash.c  hash.h  hwtime.h  insert.c  journal.c  kv.c  kv.h  kvlsm.c  kvmem.c  legacy.c  lempar.c  loadext.c  lsm.h  lsmInt.h  lsm_ckpt.c  (+126 more)
test/: 8_3_names.test  aggerror.test  all.test  alter.test  alter2.test  alter3.test  alter4.test  altermalloc.test  analyze.test  analyze3.test  attach.test  attach2.test  attach3.test  attach4.test  attachmalloc.test  auth.test  auth2.test  auth3.test  autoinc.test  autoindex1.test  autovacuum.test  autovacuum_ioerr2.test  avtrans.test  backcompat.test  (+503 more)
(+104 files in other folders)
